[build-system]
requires = ["setuptools>=65.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "qgis_plugin_tools"
version = "0.3.0"
description = "A collection of helpful tools and widgets to aid QGIS plugin tool development"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["qgis", "QGIS", "PyQGIS"]
authors = [
  {name = "3Liz"},
  {name = "Gispo Ltd.", email = "info@gispo.fi"},
]
maintainers = [
  {name = "Gispo Ltd.", email = "info@gispo.fi"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
]

[project.optional-dependencies]
dev = [
  "bandit[toml]>=1.7.5",
  "black>=23.3.0",
  "flake8>=6.0.0",
  "flake8-2020>=1.8.0",
  "flake8-annotations>=3.0.1",
  "flake8-bugbear>=23.3.23",
  "flake8-builtins>=2.1.0",
  "flake8-comprehensions>=3.12.0",
  "flake8-docstrings>=1.7.0",
  "flake8-encodings[classes]>=0.5.0",
  "flake8-mutable>=1.2.0",
  "flake8-no-pep420>=2.4.0",
  "flake8-noqa>=1.3.1",
  "flake8-pie>=0.16.0",
  "flake8-pytest-style>=1.7.2",
  "flake8-qgis>=1.0.0",
  "flake8-simplify>=0.20.0",
  "flake8-tidy-imports>=4.8.0",
  "flake8-use-fstring>=1.4",
  "isort>=5.12.0",
  "mypy>=1.2.0",
  "pep8-naming>=0.13.3",
  "pip-tools>=6.13.0",
  "pre-commit>=3.3.1",
  "pylint>=2.17.4",
  # stubs
  "PyQt5-stubs~=5.15.6.0",
  "types-requests<2.30",
]
test = [
  "pytest>=7.3.1",
  "pytest-mock>=3.10.0",
  "pytest-qgis>=1.3.2",
  "pytest-qt>=4.2.0",
  "pytest-timeout>=2.1.0",
]

[project.urls]
homepage = "https://github.com/GispoCoding/qgis_plugin_tools"

[tool.setuptools]
packages = [
  'qgis_plugin_tools',
  'qgis_plugin_tools.infrastructure',
  'qgis_plugin_tools.resources',
  'qgis_plugin_tools.resources.ui',
  'qgis_plugin_tools.testing',
  'qgis_plugin_tools.tools',
  'qgis_plugin_tools.widgets',
]
# due to .ui files actually needed on disk when using __file__ relative paths?
zip-safe = false

[tool.setuptools.package-dir]
qgis_plugin_tools = "."

[tool.setuptools.package-data]
"*" = [
  "py.typed",
  "*.ui",
]

[tool.bandit]
skips = [
  "B101",  # assert_used
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "redundant-self",
  "truthy-bool",
  "truthy-iterable",
]
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_reexport = true
show_column_numbers = true
show_error_context = true
strict_equality = true
strict_concatenate = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  "debugpy",
  "osgeo",
  "ptvsd",
  "pydevd",
  "qgis.PyQt.*",
  "qgis.utils",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "qgis_plugin_tools.test.*"
disallow_untyped_defs = false

[tool.pylint.messages_control]
disable = [
  "invalid-name",                  # C0103
  "missing-module-docstring",      # C0114
  "missing-class-docstring",       # C0115
  "missing-function-docstring",    # C0116
  "line-too-long",                 # C0301
  "import-error",                  # E0401
  "no-name-in-module",             # E0611
  "no-member",                     # E1101
  "too-few-public-methods",        # R0903
  "fixme",                         # W0511
  "unused-argument",               # W0613
  "broad-exception-caught",        # W0718
]

[tool.pylint.design]
max-attributes = 13   # default 7  # R0902
max-args = 13         # default 5  # R0913
max-locals = 20       # default 15 # R0914

[tool.pylint.similarities]
min-similarity-lines = 6           # R0801

[tool.pytest.ini_options]
testpaths = ["test"]
timeout = 60
